--- a/esw/MJ-ESW/0_Test/basic.ipynb
+++ b/esw/MJ-ESW/0_Test/basic.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,71 +98,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Ball:\n",
-    "    # 공모양, x축 속도, y축 가속도, \n",
-    "    def __init__(self, width, height, size = 8):\n",
+    "    def __init__(self, width, height, size=6):\n",
     "        self.appearance = 'circle'\n",
     "        self.state = None\n",
     "        self.items_queue = deque()\n",
-    "        self.position = np.array([width/2 - size, height/2 - size, width/2 + size, height/2 + size])\n",
-    "        self.speed = 5\n",
+    "        self.position = np.array([0, height/2 - size, 2*size, height/2 + size])\n",
+    "        self.speed = 3\n",
     "        self.velocity = 0\n",
     "        self.acceleration = 1\n",
     "        self.outline = \"#000000\"\n",
+    "        self.bottom_floor_ranges = []\n",
+    "        self.size = size\n",
+    "        self.stage = 0\n",
     "\n",
-    "    # 움직임 정의\n",
-    "    def move(self, command = None):\n",
     "\n",
-    "        # y축에 대한 정의\n",
+    "    # 바닥들을 정의해주는 코드\n",
+    "    def set_bottom_floor_ranges(self, bottom_floor_ranges):\n",
+    "        self.bottom_floor_ranges = bottom_floor_ranges\n",
+    "\n",
+    "    def move(self, command=None):\n",
     "        self.velocity += self.acceleration\n",
     "        self.position[3] += self.velocity\n",
     "        self.position[1] += self.velocity\n",
     "\n",
-    "        if(self.position[3] >= 240 and self.velocity > 0):\n",
-    "            self.velocity = -11\n",
-    "\n",
-    "        # shoot 아이템 때문에 들어간 코드\n",
-    "        if( self.speed > 5 ):\n",
+    "        # shoot 아이템을 위해 만든 조건\n",
+    "        if self.speed > 3:\n",
     "            self.speed -= self.acceleration\n",
     "\n",
-    "        # 아이템 사용할 때 사용될 코드(조건)\n",
+    "        # 아이템 사용을 queue로 구현\n",
     "        if self.items_queue and not joystick.button_B.value:\n",
     "            current_item = self.items_queue[0]\n",
     "            current_item.use(self)\n",
     "            self.items_queue.popleft()\n",
     "\n",
-    "        # 가만히 있을 때\n",
     "        if command['move'] == False:\n",
     "            self.state = None\n",
-    "        \n",
-    "        # 움직일 때\n",
     "        else:\n",
     "            self.state = 'move'\n",
-    "                \n",
     "            if command['left_pressed']:\n",
     "                self.position[0] -= self.speed\n",
     "                self.position[2] -= self.speed\n",
-    "                \n",
     "            if command['right_pressed']:\n",
     "                self.position[0] += self.speed\n",
     "                self.position[2] += self.speed\n",
     "\n",
-    "    # 아이템을 먹는 거 체크\n",
+    "        if self.position[3] > 240:\n",
+    "            self.state = 'Die'\n",
+    "\n",
+    "        # 바닥에 부딪히는지 확인\n",
+    "        self.check_bottom_collision()\n",
+    "\n",
+    "    # 바닥 부딪힘 확인 함수 정의\n",
+    "    def check_bottom_collision(self):\n",
+    "        for bottom_floor_range in self.bottom_floor_ranges:\n",
+    "            x_range, y_value = bottom_floor_range\n",
+    "            if (\n",
+    "                self.position[0] >= x_range[0]\n",
+    "                and self.position[2] <= x_range[1]\n",
+    "                and self.position[3] >= y_value[0]\n",
+    "            ):\n",
+    "                # 시간이 안맞아서 바닥 위에서 튕기지 않아 위치를 수정해주는 코드를 추가\n",
+    "                self.position[3] = y_value[0]\n",
+    "                self.position[1] = y_value[0] - 2 * self.size\n",
+    "                self.velocity = -9\n",
+    "\n",
+    "    # 아이템과의 충돌을 확인하기 위한 코드, TA-ESW의 코드 활용\n",
     "    def collision_check(self, items):\n",
     "        for item in items:\n",
     "            collision = self.overlap(self.position, item.position)\n",
-    "\n",
     "            if collision:\n",
     "                self.items_queue.append(item)\n",
     "                items.remove(item)\n",
-    "\n",
+    "    # 위와 마찬가지\n",
     "    def overlap(self, ego_position, other_position):\n",
-    "        return ego_position[0] < other_position[2] and ego_position[1] < other_position[3] \\\n",
-    "            and ego_position[2] > other_position[0] and ego_position[3] > other_position[1]\n"
+    "        return (\n",
+    "            ego_position[0] < other_position[2]\n",
+    "            and ego_position[1] < other_position[3]\n",
+    "            and ego_position[2] > other_position[0]\n",
+    "            and ego_position[3] > other_position[1]\n",
+    "        )"
    ]
   },
   {
@@ -174,12 +193,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Item:\n",
-    "    def __init__(self, spawn_position, size = 13, image_path=None):\n",
+    "    def __init__(self, spawn_position, size = 12, image_path=None):\n",
     "        self.appearance = 'image'\n",
     "        self.position = np.array([spawn_position[0] - size, spawn_position[1] - size, spawn_position[0] + size, spawn_position[1] + size])\n",
     "        self.outline = \"#00FF00\"\n",
@@ -201,7 +220,7 @@
     "    #높게 뛰게\n",
     "    def use(self, ball):\n",
     "        super().use(ball)\n",
-    "        ball.velocity = -10\n",
+    "        ball.velocity = -9\n",
     "\n",
     "# 슛아이템에 대한 정의\n",
     "class Shoot(Item):\n",
@@ -211,8 +230,16 @@
     "    # 빠르게 날아가기\n",
     "    def use(self, ball):\n",
     "        super().use(ball)\n",
-    "        ball.speed = 16\n",
-    "        ball.velocity -= 3\n"
+    "        ball.speed = 11\n",
+    "        ball.velocity -= 3\n",
+    "\n",
+    "class Star(Item):\n",
+    "    def __init__(self, spawn_position):\n",
+    "        super().__init__(spawn_position, image_path=\"Star.png\")\n",
+    "\n",
+    "    def use(self, ball):\n",
+    "        super().use(ball)\n",
+    "        ball.stage += 1\n"
    ]
   },
   {
@@ -224,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 509,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +272,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb Cell 11\u001b[0m line \u001b[0;36m4\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=37'>38</a>\u001b[0m             my_draw\u001b[39m.\u001b[39mrectangle(\u001b[39mtuple\u001b[39m(jump_item\u001b[39m.\u001b[39mposition), outline\u001b[39m=\u001b[39mjump_item\u001b[39m.\u001b[39moutline, fill\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=40'>41</a>\u001b[0m \u001b[39m# Update display\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=41'>42</a>\u001b[0m joystick\u001b[39m.\u001b[39;49mdisp\u001b[39m.\u001b[39;49mimage(my_image)\n",
+      "\u001b[1;32m/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb Cell 11\u001b[0m line \u001b[0;36m5\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=47'>48</a>\u001b[0m                     my_draw\u001b[39m.\u001b[39mrectangle(\u001b[39mtuple\u001b[39m(_item\u001b[39m.\u001b[39mposition), outline\u001b[39m=\u001b[39m_item\u001b[39m.\u001b[39moutline, fill\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=49'>50</a>\u001b[0m         \u001b[39m# Update display\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=50'>51</a>\u001b[0m         joystick\u001b[39m.\u001b[39;49mdisp\u001b[39m.\u001b[39;49mimage(my_image)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=52'>53</a>\u001b[0m \u001b[39mif\u001b[39;00m my_circle\u001b[39m.\u001b[39mstage \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=53'>54</a>\u001b[0m     \u001b[39m# 게임 세계에 아이템 추가\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=54'>55</a>\u001b[0m     items \u001b[39m=\u001b[39m [Star((\u001b[39m30\u001b[39m, joystick\u001b[39m.\u001b[39mheight \u001b[39m-\u001b[39m \u001b[39m24\u001b[39m)), Jump((\u001b[39m200\u001b[39m, joystick\u001b[39m.\u001b[39mheight \u001b[39m-\u001b[39m \u001b[39m22\u001b[39m))]  \u001b[39m# 필요한 만큼 추가\u001b[39;00m\n",
       "File \u001b[0;32m/usr/local/lib/python3.11/dist-packages/adafruit_rgb_display/rgb.py:233\u001b[0m, in \u001b[0;36mDisplay.image\u001b[0;34m(self, img, rotation, x, y)\u001b[0m\n\u001b[1;32m    231\u001b[0m             pixels[\u001b[39m2\u001b[39m \u001b[39m*\u001b[39m (j \u001b[39m*\u001b[39m imwidth \u001b[39m+\u001b[39m i)] \u001b[39m=\u001b[39m pix \u001b[39m>>\u001b[39m \u001b[39m8\u001b[39m\n\u001b[1;32m    232\u001b[0m             pixels[\u001b[39m2\u001b[39m \u001b[39m*\u001b[39m (j \u001b[39m*\u001b[39m imwidth \u001b[39m+\u001b[39m i) \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m] \u001b[39m=\u001b[39m pix \u001b[39m&\u001b[39m \u001b[39m0xFF\u001b[39m\n\u001b[0;32m--> 233\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_block(x, y, x \u001b[39m+\u001b[39;49m imwidth \u001b[39m-\u001b[39;49m \u001b[39m1\u001b[39;49m, y \u001b[39m+\u001b[39;49m imheight \u001b[39m-\u001b[39;49m \u001b[39m1\u001b[39;49m, pixels)\n",
       "File \u001b[0;32m/usr/local/lib/python3.11/dist-packages/adafruit_rgb_display/rgb.py:170\u001b[0m, in \u001b[0;36mDisplay._block\u001b[0;34m(self, x0, y0, x1, y1, data)\u001b[0m\n\u001b[1;32m    168\u001b[0m     size \u001b[39m=\u001b[39m struct\u001b[39m.\u001b[39mcalcsize(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_DECODE_PIXEL)\n\u001b[1;32m    169\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mread(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_RAM_READ, (x1 \u001b[39m-\u001b[39m x0 \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m) \u001b[39m*\u001b[39m (y1 \u001b[39m-\u001b[39m y0 \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m) \u001b[39m*\u001b[39m size)\n\u001b[0;32m--> 170\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mwrite(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_RAM_WRITE, data)\n\u001b[1;32m    171\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n",
       "File \u001b[0;32m/usr/local/lib/python3.11/dist-packages/adafruit_rgb_display/rgb.py:336\u001b[0m, in \u001b[0;36mDisplaySPI.write\u001b[0;34m(self, command, data)\u001b[0m\n\u001b[1;32m    334\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdc_pin\u001b[39m.\u001b[39mvalue \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m    335\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mspi_device \u001b[39mas\u001b[39;00m spi:\n\u001b[0;32m--> 336\u001b[0m     spi\u001b[39m.\u001b[39;49mwrite(data)\n",
@@ -258,47 +285,108 @@
    ],
    "source": [
     "my_circle = Ball(joystick.width, joystick.height)\n",
-    "my_draw.rectangle((0, 0, joystick.width, joystick.height), fill=(255, 255, 255, 100))\n",
     "\n",
-    "# 게임 세계에 아이템 추가\n",
-    "items = [Jump((200, joystick.height -14)), Shoot((20, joystick.height - 14))]  # 필요한 만큼 추가\n",
+    "if my_circle.stage == 0:\n",
+    "    # 게임 세계에 아이템 추가\n",
+    "    items = [Shoot((30, joystick.height - 22)), Star((220, joystick.height - 24))]  # 필요한 만큼 추가\n",
+    "\n",
+    "    # 배경 이미지 불러오기\n",
+    "    background_image = Image.open(\"Tutorial_shoot.png\")\n",
+    "\n",
+    "    # 바닥 영역 정의\n",
+    "    bottom_floor_ranges = [((0, 59), (230, 239)), ((120,239), (230,239))]\n",
+    "\n",
+    "    my_circle.set_bottom_floor_ranges(bottom_floor_ranges)\n",
+    "\n",
+    "    while my_circle.stage == 0:\n",
+    "\n",
+    "        command = {'move': False, 'left_pressed': False, 'right_pressed': False}\n",
+    "\n",
+    "        if not joystick.button_L.value:  # 왼쪽 버튼이 눌린 경우\n",
+    "            command['left_pressed'] = True\n",
+    "            command['move'] = True\n",
+    "\n",
+    "        if not joystick.button_R.value:  # 오른쪽 버튼이 눌린 경우\n",
+    "            command['right_pressed'] = True\n",
+    "            command['move'] = True\n",
+    "\n",
+    "        my_circle.move(command)\n",
+    "        my_circle.collision_check(items)  # 아이템과의 충돌 확인 및 아이템 사용\n",
+    "            \n",
+    "        # 배경 이미지로 설정\n",
+    "        my_image.paste(background_image, (0, 0))\n",
+    "        \n",
+    "\n",
+    "        # 아이템을 가지고 있다면 주황색으로, 아니면 노란색으로\n",
+    "        if my_circle.items_queue:\n",
+    "            my_draw.ellipse(tuple(my_circle.position), outline=my_circle.outline, fill=(255, 165, 0, 255))\n",
+    "        else:\n",
+    "            my_draw.ellipse(tuple(my_circle.position), outline=my_circle.outline, fill=(255, 255, 0))\n",
     "\n",
     "\n",
-    "while True:\n",
-    "    command = {'move': False, 'left_pressed': False, 'right_pressed': False}\n",
+    "        # 아이템 그리기\n",
+    "        for _item in items:\n",
+    "            if not _item.is_collected:\n",
+    "                # 아이템 이미지를 그리기\n",
+    "                if _item.image:\n",
+    "                    my_image.paste(_item.image, (int(_item.position[0]), int(_item.position[1])))\n",
+    "                else:\n",
+    "                    my_draw.rectangle(tuple(_item.position), outline=_item.outline, fill=None)\n",
     "\n",
-    "    if not joystick.button_L.value:  # 왼쪽 버튼이 눌린 경우\n",
-    "        command['left_pressed'] = True\n",
-    "        command['move'] = True\n",
+    "        # Update display\n",
+    "        joystick.disp.image(my_image)\n",
     "\n",
-    "    if not joystick.button_R.value:  # 오른쪽 버튼이 눌린 경우\n",
-    "        command['right_pressed'] = True\n",
-    "        command['move'] = True\n",
+    "if my_circle.stage == 1:\n",
+    "    # 게임 세계에 아이템 추가\n",
+    "    items = [Star((30, joystick.height - 24)), Jump((200, joystick.height - 22))]  # 필요한 만큼 추가\n",
     "\n",
-    "    my_circle.move(command)\n",
-    "    my_circle.collision_check(items)  # 아이템과의 충돌 확인 및 아이템 사용\n",
+    "    # 배경 이미지 불러오기\n",
+    "    background_image = Image.open(\"Tutorial_jump.png\")\n",
     "\n",
-    "    # 그리기 로직 (순서가 중요함)\n",
-    "    my_draw.rectangle((0, 0, joystick.width, joystick.height), fill=(255, 255, 255, 100))\n",
+    "    # 바닥 영역 정의\n",
+    "    bottom_floor_ranges = [((0, 115), (230,239)), ((116, 157), (166,239)), ((117,239), (230, 239))]\n",
     "\n",
-    "    # 아이템을 가지고 있다면 주황색으로, 아니면 노란색으로\n",
-    "    if( my_circle.items_queue ):\n",
-    "        my_draw.ellipse(tuple(my_circle.position), outline=my_circle.outline, fill=(255, 165, 0, 255))\n",
-    "    else:\n",
-    "        my_draw.ellipse(tuple(my_circle.position), outline=my_circle.outline, fill=(255, 255, 0))\n",
+    "    my_circle.set_bottom_floor_ranges(bottom_floor_ranges)\n",
     "\n",
-    "    # 아이템 그리기\n",
-    "    for jump_item in items:\n",
-    "        if not jump_item.is_collected:\n",
-    "            # 아이템 이미지를 그리기\n",
-    "            if jump_item.image:\n",
-    "                my_image.paste(jump_item.image, (int(jump_item.position[0]), int(jump_item.position[1])))\n",
-    "            else:\n",
-    "                my_draw.rectangle(tuple(jump_item.position), outline=jump_item.outline, fill=None)\n",
+    "    while my_circle.stage == 1:\n",
+    "        command = {'move': False, 'left_pressed': False, 'right_pressed': False}\n",
+    "\n",
+    "        if not joystick.button_L.value:  # 왼쪽 버튼이 눌린 경우\n",
+    "            command['left_pressed'] = True\n",
+    "            command['move'] = True\n",
+    "\n",
+    "        if not joystick.button_R.value:  # 오른쪽 버튼이 눌린 경우\n",
+    "            command['right_pressed'] = True\n",
+    "            command['move'] = True\n",
+    "\n",
+    "        my_circle.move(command)\n",
+    "        my_circle.collision_check(items)  # 아이템과의 충돌 확인 및 아이템 사용\n",
+    "            \n",
+    "        # 배경 이미지로 설정\n",
+    "        my_image.paste(background_image, (0, 0))\n",
+    "        \n",
+    "\n",
+    "        # 아이템을 가지고 있다면 주황색으로, 아니면 노란색으로\n",
+    "        if my_circle.items_queue:\n",
+    "            my_draw.ellipse(tuple(my_circle.position), outline=my_circle.outline, fill=(255, 165, 0, 255))\n",
+    "        else:\n",
+    "            my_draw.ellipse(tuple(my_circle.position), outline=my_circle.outline, fill=(255, 255, 0))\n",
     "\n",
     "\n",
-    "    # Update display\n",
-    "    joystick.disp.image(my_image)"
+    "        # 아이템 그리기\n",
+    "        for _item in items:\n",
+    "            if not _item.is_collected:\n",
+    "                # 아이템 이미지를 그리기\n",
+    "                if _item.image:\n",
+    "                    my_image.paste(_item.image, (int(_item.position[0]), int(_item.position[1])))\n",
+    "                else:\n",
+    "                    my_draw.rectangle(tuple(_item.position), outline=_item.outline, fill=None)\n",
+    "\n",
+    "        # Update display\n",
+    "        joystick.disp.image(my_image)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
