--- a/esw/MJ-ESW/0_Test/basic.ipynb
+++ b/esw/MJ-ESW/0_Test/basic.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,12 +116,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Ball:\n",
-    "    def __init__(self, spawn_position, size = 6):\n",
+    "    def __init__(self, spawn_position, size = 5):\n",
     "        self.appearance = 'circle'\n",
     "        self.state = None\n",
     "        self.items_queue = deque()\n",
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,14 +315,36 @@
     "\n",
     "    def use(self, ball):\n",
     "        super().use(ball)\n",
+    "        ball.stage += 1\n",
+    "\n",
+    "class Dark_Star(Item):\n",
+    "    def __init__(self, spawn_position):\n",
+    "        super().__init__(spawn_position, image_path=\"Dark_Star.png\")\n",
+    "\n",
+    "    def use(self, ball):\n",
+    "        super().use(ball)\n",
     "        ball.stage += 1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Right Collision: [152 205 164 215] (164, 170) (151, 230)\n",
+      "Right Collision: [155 194 165 204] (164, 170) (151, 230)\n",
+      "Right Collision: [155 187 165 197] (164, 170) (151, 230)\n",
+      "Right Collision: [ 16 212  28 222] (26, 31) (127, 229)\n",
+      "Right Collision: [ 17 190  27 200] (26, 31) (127, 229)\n",
+      "Right Collision: [ 17 185  27 195] (26, 31) (127, 229)\n",
+      "Right Collision: [118 184 128 194] (126, 131) (127, 229)\n",
+      "Right Collision: [119 130 129 140] (126, 131) (127, 229)\n"
+     ]
+    },
     {
      "ename": "KeyboardInterrupt",
      "evalue": "",
@@ -330,7 +352,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb Cell 11\u001b[0m line \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m my_circle \u001b[39m=\u001b[39m Ball((\u001b[39m10\u001b[39m, \u001b[39m140\u001b[39m))\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mif\u001b[39;00m my_circle\u001b[39m.\u001b[39mstage \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m         \u001b[39m# 게임 세계에 아이템 추가\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m         items \u001b[39m=\u001b[39m [Shoot((\u001b[39m30\u001b[39m, joystick\u001b[39m.\u001b[39mheight \u001b[39m-\u001b[39m \u001b[39m22\u001b[39m)), Star((\u001b[39m220\u001b[39m, joystick\u001b[39m.\u001b[39mheight \u001b[39m-\u001b[39m \u001b[39m24\u001b[39m))]  \u001b[39m# 필요한 만큼 추가\u001b[39;00m\n",
+      "\u001b[1;32m/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb Cell 11\u001b[0m line \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m my_circle \u001b[39m=\u001b[39m Ball((\u001b[39m10\u001b[39m, \u001b[39m140\u001b[39m))\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mif\u001b[39;00m my_circle\u001b[39m.\u001b[39mstage \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m         \u001b[39m# 게임 세계에 아이템 추가\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X13sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m         items \u001b[39m=\u001b[39m [Shoot((\u001b[39m30\u001b[39m, joystick\u001b[39m.\u001b[39mheight \u001b[39m-\u001b[39m \u001b[39m22\u001b[39m)), Star((\u001b[39m220\u001b[39m, joystick\u001b[39m.\u001b[39mheight \u001b[39m-\u001b[39m \u001b[39m24\u001b[39m))]  \u001b[39m# 필요한 만큼 추가\u001b[39;00m\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -519,20 +541,102 @@
     "            # Update display\n",
     "            joystick.disp.image(my_image)\n",
     "\n",
+    "    \n",
+    "\n",
+    "    if my_circle.stage == 3:\n",
+    "        \n",
+    "        \n",
+    "        items = [Teleport((60, joystick.height - 22)), Dark_Star((12, joystick.height - 24)), Teleport((12, joystick.height - 60)), Teleport((100, joystick.height - 22)), Dark_Star((joystick.width / 2, joystick.height / 2)), Shoot((joystick.width - 12, 121))]  # 필요한 만큼 추가\n",
+    "\n",
+    "        # 배경 이미지 불러오기\n",
+    "        background_image = Image.open(\"map_1.png\")\n",
+    "\n",
+    "        # 바닥 영역 정의\n",
+    "        bottom_floor_ranges = [((0, 146), (230, 240)), ((147, 158), (218,230)), ((159,170), (206,218)), ((171,182), (194,206)), ((183, 194), (182, 194)), ((195,206), (170,182)), ((207,218), (158,170)), ((219,240), (134,158))\n",
+    "                           , ((26, 31 ), (127, 229)), ((126, 131), (127, 229))]\n",
+    "\n",
+    "        my_circle.set_bottom_floor_ranges(bottom_floor_ranges)\n",
+    "\n",
+    "        my_circle.set_position((60, 160))\n",
+    "        my_circle.velocity = 0\n",
+    "\n",
+    "        while (my_circle.stage == 3 or my_circle.stage == 4):\n",
+    "\n",
+    "            if my_circle.state == 'die':\n",
+    "                my_circle.reset_game((60, 160))\n",
+    "                my_circle.stage = 3\n",
+    "                items = [Teleport((60, joystick.height - 22)), Dark_Star((12, joystick.height - 24)), Teleport((12, joystick.height - 60)), Teleport((100, joystick.height - 22)), Dark_Star((joystick.width / 2, joystick.height / 2)), Shoot((joystick.width - 12, 121))]  # 필요한 만큼 추가\n",
+    "                my_circle.state = None\n",
+    "                \n",
+    "            command = {'move': False, 'left_pressed': False, 'right_pressed': False}\n",
+    "\n",
+    "            if not joystick.button_L.value:  # 왼쪽 버튼이 눌린 경우\n",
+    "                command['left_pressed'] = True\n",
+    "                command['move'] = True\n",
+    "\n",
+    "            if not joystick.button_R.value:  # 오른쪽 버튼이 눌린 경우\n",
+    "                command['right_pressed'] = True\n",
+    "                command['move'] = True\n",
+    "\n",
+    "            my_circle.move(command)\n",
+    "            my_circle.collision_check(items)  # 아이템과의 충돌 확인 및 아이템 사용\n",
+    "                \n",
+    "                    \n",
+    "            # 배경 이미지로 설정\n",
+    "            my_image.paste(background_image, (0, 0))\n",
+    "                \n",
+    "\n",
+    "            # 아이템을 가지고 있다면 주황색으로, 아니면 노란색으로\n",
+    "            if my_circle.items_queue:\n",
+    "                my_draw.ellipse(tuple(my_circle.position), outline=my_circle.outline, fill=(255, 165, 0, 255))\n",
+    "            else:\n",
+    "                my_draw.ellipse(tuple(my_circle.position), outline=my_circle.outline, fill=(255, 255, 0))\n",
+    "\n",
+    "\n",
+    "            # 아이템 그리기\n",
+    "            for _item in items:\n",
+    "                if not _item.is_collected:\n",
+    "                    # 아이템 이미지를 그리기\n",
+    "                    if _item.image:\n",
+    "                        my_image.paste(_item.image, (int(_item.position[0]), int(_item.position[1])))\n",
+    "                    else:\n",
+    "                        my_draw.rectangle(tuple(_item.position), outline=_item.outline, fill=None)\n",
+    "\n",
+    "            # Update display\n",
+    "            joystick.disp.image(my_image)\n",
+    "\n",
+    "\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Right Collision: [169 197 181 209] (164, 170) (151, 230)\n"
+      "Right Collision: [ 20 199  30 209] (26, 31) (127, 229)\n",
+      "Right Collision: [118 184 128 194] (126, 131) (127, 229)\n",
+      "Right Collision: [128 136 138 146] (126, 131) (127, 229)\n",
+      "Right Collision: [131 145 141 155] (126, 131) (127, 229)\n",
+      "Right Collision: [129 166 139 176] (126, 131) (127, 229)\n",
+      "Right Collision: [130 191 140 201] (126, 131) (127, 229)\n",
+      "Right Collision: [127 212 137 222] (126, 131) (127, 229)\n",
+      "Right Collision: [ 16 184  28 194] (26, 31) (127, 229)\n",
+      "Right Collision: [ 18 184  28 194] (26, 31) (127, 229)\n",
+      "Right Collision: [ 17 185  27 195] (26, 31) (127, 229)\n",
+      "Right Collision: [ 17 190  27 200] (26, 31) (127, 229)\n",
+      "Right Collision: [ 22 212  34 222] (26, 31) (127, 229)\n",
+      "Right Collision: [ 17 184  27 194] (26, 31) (127, 229)\n",
+      "Right Collision: [ 17 187  27 197] (26, 31) (127, 229)\n",
+      "Right Collision: [213 134 223 144] (219, 240) (134, 158)\n",
+      "Right Collision: [117 133 127 143] (126, 131) (127, 229)\n",
+      "Right Collision: [117 187 127 197] (126, 131) (127, 229)\n",
+      "Right Collision: [117 184 127 194] (126, 131) (127, 229)\n"
      ]
     },
     {
@@ -542,32 +646,33 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb Cell 12\u001b[0m line \u001b[0;36m5\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=53'>54</a>\u001b[0m             my_draw\u001b[39m.\u001b[39mrectangle(\u001b[39mtuple\u001b[39m(_item\u001b[39m.\u001b[39mposition), outline\u001b[39m=\u001b[39m_item\u001b[39m.\u001b[39moutline, fill\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=55'>56</a>\u001b[0m \u001b[39m# Update display\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=56'>57</a>\u001b[0m joystick\u001b[39m.\u001b[39;49mdisp\u001b[39m.\u001b[39;49mimage(my_image)\n",
+      "\u001b[1;32m/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb Cell 12\u001b[0m line \u001b[0;36m5\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=54'>55</a>\u001b[0m             my_draw\u001b[39m.\u001b[39mrectangle(\u001b[39mtuple\u001b[39m(_item\u001b[39m.\u001b[39mposition), outline\u001b[39m=\u001b[39m_item\u001b[39m.\u001b[39moutline, fill\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=56'>57</a>\u001b[0m \u001b[39m# Update display\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2Braspberrypi/home/kau-esw/esw/MJ-ESW/0_Test/basic.ipynb#X14sdnNjb2RlLXJlbW90ZQ%3D%3D?line=57'>58</a>\u001b[0m joystick\u001b[39m.\u001b[39;49mdisp\u001b[39m.\u001b[39;49mimage(my_image)\n",
       "File \u001b[0;32m/usr/local/lib/python3.11/dist-packages/adafruit_rgb_display/rgb.py:224\u001b[0m, in \u001b[0;36mDisplay.image\u001b[0;34m(self, img, rotation, x, y)\u001b[0m\n\u001b[1;32m    218\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    219\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mImage must not exceed dimensions of display (\u001b[39m\u001b[39m{0}\u001b[39;00m\u001b[39mx\u001b[39m\u001b[39m{1}\u001b[39;00m\u001b[39m).\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(\n\u001b[1;32m    220\u001b[0m             \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mwidth, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mheight\n\u001b[1;32m    221\u001b[0m         )\n\u001b[1;32m    222\u001b[0m     )\n\u001b[1;32m    223\u001b[0m \u001b[39mif\u001b[39;00m numpy:\n\u001b[0;32m--> 224\u001b[0m     pixels \u001b[39m=\u001b[39m \u001b[39mbytes\u001b[39;49m(image_to_data(img))\n\u001b[1;32m    225\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    226\u001b[0m     \u001b[39m# Slower but doesn't require numpy\u001b[39;00m\n\u001b[1;32m    227\u001b[0m     pixels \u001b[39m=\u001b[39m \u001b[39mbytearray\u001b[39m(imwidth \u001b[39m*\u001b[39m imheight \u001b[39m*\u001b[39m \u001b[39m2\u001b[39m)\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "my_circle = Ball((8, 140))\n",
+    "my_circle = Ball((60, 160))\n",
     "\n",
     "while True:\n",
     "    # 게임 세계에 아이템 추가\n",
-    "    items = [Teleport((150, joystick.height - 22)), Star((220, joystick.height - 24))]  # 필요한 만큼 추가\n",
+    "    items = [Teleport((60, joystick.height - 22)), Dark_Star((12, joystick.height - 24)), Teleport((12, joystick.height - 60)), Teleport((100, joystick.height - 22)), Dark_Star((joystick.width / 2, joystick.height / 2)), Shoot((joystick.width - 12, 121))]  # 필요한 만큼 추가\n",
     "\n",
     "    # 배경 이미지 불러오기\n",
-    "    background_image = Image.open(\"Tutorial_teleport.png\")\n",
+    "    background_image = Image.open(\"map_1.png\")\n",
     "\n",
     "    # 바닥 영역 정의\n",
-    "    bottom_floor_ranges = [((0, 17), (230, 240)), ((50,60), (230,240)), ((93,103), (230,240)), ((136,240), (230,240)), ((164, 170), (151, 230))]\n",
+    "    bottom_floor_ranges = [((0, 146), (230, 240)), ((147, 158), (218,230)), ((159,170), (206,218)), ((171,182), (194,206)), ((183, 194), (182, 194)), ((195,206), (170,182)), ((207,218), (158,170)), ((219,240), (134,158))\n",
+    "                           , ((26, 31 ), (127, 229)), ((126, 131), (127, 229))]\n",
     "\n",
     "    my_circle.set_bottom_floor_ranges(bottom_floor_ranges)\n",
     "\n",
     "    while True:\n",
     "        \n",
     "        if my_circle.state == 'die':\n",
-    "            my_circle.reset_game((8,140))\n",
-    "            items = [Teleport((150, joystick.height - 22)), Star((220, joystick.height - 24))]  # 필요한 만큼 추가\n",
+    "            my_circle.reset_game((60,160))\n",
+    "            items = [Teleport((60, joystick.height - 22)), Dark_Star((12, joystick.height - 24)), Teleport((12, joystick.height - 60)), Teleport((100, joystick.height - 22)), Dark_Star((joystick.width / 2, joystick.height / 2)), Shoot((joystick.width - 12, 121))]  # 필요한 만큼 추가\n",
     "            my_circle.state = None\n",
     "            \n",
     "        command = {'move': False, 'left_pressed': False, 'right_pressed': False}\n",
